Fix - spacing issues for error message and field description

--- a/assets/css/everest-forms.scss
+++ b/assets/css/everest-forms.scss
@@ -201,8 +201,8 @@
 				}
 
 				&.evf-error {
-					margin-top: 15px;
-					margin-bottom: 0;
+					margin-top: 0;
+					margin-bottom: 10px;
 					font-weight: 400;
 					padding: 7px 10px;
 					border-radius: 3px;
@@ -240,7 +240,7 @@
 				height: auto;
 				font-size: 14px;
 				box-shadow: none;
-				margin-bottom: 0;
+				margin-bottom: 10px;
 				padding: 6px 12px;
 				color: $color-gray-darker;
 
